// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import storageAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const storageAdapter = storageAdapter_constructor(
      storageAdapter_options,
      storageAdapter_imports
    )
export default storageAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"
const storageAdapter_constructor = ((moduleOrFile) => {
  return interopRequireDefault(__non_webpack_require__(moduleOrFile)).default
})(process.env[\\"STORAGE_ADAPTER\\"])
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": process.env[\\"STORAGE_OPTIONS_URL\\"]
}
const storageAdapter = storageAdapter_constructor(
      storageAdapter_options,
      storageAdapter_imports
    )
export default storageAdapter
"
`;
